Charge refactoring