@@ -7,25 +7,24 @@
 
 package mods.railcraft.api.charge;
 
-import com.google.common.base.Objects;
-
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.Map;
 import java.util.Random;
-
 import javax.annotation.Nullable;
-
-import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.core.BlockPos;
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.state.BlockBehaviour;
+import net.minecraft.world.level.block.state.BlockState;
 
 /**
- * This interface must be implement by any {@link net.minecraft.block.Block Block}
- * that wants to interface with any of the charge networks.
+ * This interface must be implement by any {@link net.minecraft.block.Block Block} that wants to
+ * interface with any of the charge networks.
  *
- * <p>Created by CovertJaguar on 7/25/2016 for Railcraft.
+ * <p>
+ * Created by CovertJaguar on 7/25/2016 for Railcraft.
  *
  * @author CovertJaguar (https://www.railcraft.info)
  */
@@ -34,10 +33,12 @@ public interface ChargeBlock {
   /**
    * Asks the Block to provide a map of ChargeSpecs for each network.
    *
-   * <p>It is generally to be considered an error to return the same charge definition to multiple
+   * <p>
+   * It is generally to be considered an error to return the same charge definition to multiple
    * networks. Most blocks will probably be members of the {@link Charge#distribution} network only.
    *
-   * <p>Only "transformer" blocks that pass charge from one network to another should respond to
+   * <p>
+   * Only "transformer" blocks that pass charge from one network to another should respond to
    * multiple networks.
    *
    * @return A mapping of networks to ChargeSpecs. Most blocks should only respond to one type of
@@ -52,37 +53,42 @@ public interface ChargeBlock {
   /**
    * The Charge Meter calls this to get access for meter readings.
    *
-   * <p>Most blocks don't need to touch this, but Multi-blocks may want to redirect to the master
+   * <p>
+   * Most blocks don't need to touch this, but Multi-blocks may want to redirect to the master
    * block.
    */
-  default @Nullable Charge.IAccess getMeterAccess(Charge network, BlockState state, Level world,
+  @Nullable
+  default Charge.Access getMeterAccess(Charge network, BlockState state, ServerLevel level,
       BlockPos pos) {
-    return network.network(world).access(pos);
+    return network.network(level).access(pos);
   }
 
   /**
    * Helper method for registering a block to the network.
    *
-   * <p>This function must be called from the following functions:
+   * <p>
+   * This function must be called from the following functions:
    * {@link net.minecraft.block.Block#onBlockAdded(World, BlockPos, BlockState)}
    * {@link net.minecraft.block.Block#updateTick(World, BlockPos, BlockState, Random)}
    *
-   * <p>The block must set {@link net.minecraft.block.Block#setTickRandomly(boolean)} to true in the
+   * <p>
+   * The block must set {@link net.minecraft.block.Block#setTickRandomly(boolean)} to true in the
    * constructor.
    */
-  default void registerNode(BlockState state, Level world, BlockPos pos) {
-    EnumSet.allOf(Charge.class).forEach(n -> n.network(world).addNode(pos, state));
+  default void registerNode(BlockState state, ServerLevel level, BlockPos pos) {
+    EnumSet.allOf(Charge.class).forEach(n -> n.network(level).addNode(pos, state));
   }
 
   /**
    * Helper method for removing a block from the networks.
    *
-   * <p>This function must be called from the following function:
-   * {@link net.minecraft.block.Block#breakBlock(World, BlockPos, BlockState)}
+   * <p>
+   * This function must be called from the following function:
+   * {@link BlockBehaviour#onRemove(BlockState, Level, BlockPos, BlockState, boolean)}.
    */
-  default void deregisterNode(Level world, BlockPos pos) {
+  default void deregisterNode(ServerLevel level, BlockPos pos) {
     // FLATTENING make sure this not called during state changes
-    EnumSet.allOf(Charge.class).forEach(n -> n.network(world).removeNode(pos));
+    EnumSet.allOf(Charge.class).forEach(n -> n.network(level).removeNode(pos));
   }
 
   enum ConnectType {
@@ -91,86 +97,35 @@ public interface ChargeBlock {
 
   /**
    * A ChargeSpec defines the electrical properties of the block.
+   * 
+   * @param connectType - this controls how our block will connect to other blocks. Many blocks can
+   *        only connect in specific ways due to block shape.
+   * @param losses - the cost of connecting this block to the charge network due to resistance
+   *        losses, etc. Transformers are typically 0.5. Batteries 0.2-0.3. Wires 0.025. Tracks
+   *        0.01. Generators 0. Consumers 0.1.
+   * @param batterySpec - the battery specification for our block. Batteries are optional.
    */
-  final class ChargeSpec {
-    private final ConnectType connectType;
-    private final double losses;
-    private final @Nullable IBatteryBlock.Spec batterySpec;
+  record ChargeSpec(ConnectType connectType, float losses,
+      @Nullable ChargeStorageBlock.Spec batterySpec) {
 
     /**
      * Helper method for ChargeSpec map construction.
      */
     public static Map<Charge, ChargeSpec> make(Charge network, ConnectType connectType,
-        double losses) {
-      return Collections.singletonMap(network, new ChargeSpec(connectType, losses));
+        float losses) {
+      return Map.of(network, new ChargeSpec(connectType, losses));
     }
 
     /**
      * Helper method for ChargeSpec map construction.
      */
     public static Map<Charge, ChargeSpec> make(Charge network, ConnectType connectType,
-        double losses, @Nullable IBatteryBlock.Spec batterySpec) {
-      return Collections.singletonMap(network, new ChargeSpec(connectType, losses, batterySpec));
+        float losses, @Nullable ChargeStorageBlock.Spec batterySpec) {
+      return Map.of(network, new ChargeSpec(connectType, losses, batterySpec));
     }
 
-    public ChargeSpec(ConnectType connectType, double losses) {
+    public ChargeSpec(ConnectType connectType, float losses) {
       this(connectType, losses, null);
-    }
-
-    /**
-     * Creates a new charge specification.
-     * @param connectType This controls how our block will connect to other blocks. Many blocks can
-     *        only connect in specific ways due to block shape.
-     * @param losses The cost of connecting this block to the charge network due to resistance
-     *        losses, etc. Transformers are typically 0.5. Batteries 0.2-0.3. Wires 0.025. Tracks
-     *        0.01. Generators 0. Consumers 0.1.
-     * @param batterySpec The battery specification for our block. Batteries are optional.
-     */
-    public ChargeSpec(ConnectType connectType, double losses,
-        @Nullable IBatteryBlock.Spec batterySpec) {
-      this.connectType = connectType;
-      this.losses = losses;
-      this.batterySpec = batterySpec;
-    }
-
-    public double getLosses() {
-      return losses;
-    }
-
-    public @Nullable IBatteryBlock.Spec getBatterySpec() {
-      return batterySpec;
-    }
-
-    public ConnectType getConnectType() {
-      return connectType;
-    }
-
-    @Override
-    public String toString() {
-      String string = String.format("ChargeSpec{%s, losses=%.2f}", connectType, losses);
-      if (batterySpec != null) {
-        string += "|" + batterySpec;
-      }
-      return string;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) {
-        return true;
-      }
-      if (o == null || getClass() != o.getClass()) {
-        return false;
-      }
-      ChargeSpec that = (ChargeSpec) o;
-      return Double.compare(that.losses, losses) == 0
-          && connectType == that.connectType
-          && Objects.equal(batterySpec, that.batterySpec);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hashCode(connectType, losses, batterySpec);
     }
   }
 }
